# gesture_control

./: .gitignore  AGENTS.md  demo_hand_tracking.py  main.py  main_landmarks.py  main_mouse_control.py  pyproject.toml
hand_tracker/: __init__.py  detector.py  mouse_controller.py  types.py  utils.py
prompts/: mulpart.md
research/: hand_gesture_3d_control.md
src/core/: __init__.py  config.py  types.py
src/gesture/: __init__.py  base.py  finger_detector.py  gesture_recognizer.py  swipe_detector.py
src/tracking/: __init__.py  hand_tracker.py  model_manager.py
src/utils/: __init__.py  video_capture.py
src/visualization/: __init__.py  drawer.py
