[project]
name = "mediapipe-test"
version = "0.1.0"
description = "Hand gesture tracking with MediaPipe"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe>=0.10",
    "opencv-python>=4.5",
    "numpy>=1.20",
    "pygame>=2.0",
    "PyOpenGL>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
]

[dependency-groups]
dev = [
    "ruff>=0.15.1",
]
